# ets-advisor-demo

./: .gitignore  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  GITHUB_READY.md  LICENSE  LOGO_INTEGRATION.md  README.md  README_GITHUB.md  STATUS.md  app.py  deploy.sh  pyproject.toml  requirements.txt  start_demo.sh  test_app.py  verify_demo.py
infra/: deployment_pipeline.yml  fabric_workspace.bicep  ksql_topics.sql
lakehouse/: create_lakehouse.sql  fuel_invoices_sample.csv  price_curve_sample.csv  scenario_sample.csv
powerbi/ETS_Advisor.pbip/: ETS_Advisor.pbip
powerbi/ETS_Advisor.pbip/dataset/: model.bim
powerbi/dax/: calculation_groups.dax  measures.dax
scripts/: generate_sample_data.py  generate_scenarios.py  ingest_fuel.py  ingest_telematics.py  opt_fleet_replacement.py
